# rpino-periodic-semilinear-elliptic

./: .gitignore  CITATION.cff  INSTRUCCIONES_EJECUCION.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: burgers_2d.yaml  nonlinear_poisson_1d.yaml  nonlinear_poisson_2d.yaml
scripts/: 01_generate_dataset.py  02_train_rpino.py  03_evaluate_rpino.py  04_train_fno.py  05_evaluate_fno.py  06_run_ablation.py  07_run_iteration_sweep.py  08_make_paper_figures.py  09_make_paper_tables.py  10_run_extended_experiments.py  11_evaluate_burgers_diagnostics.py  12_make_final_figures.py  13_ablation_burgers.py
src/q1pde/: config.py  dataset.py  dataset_burgers.py  metrics.py  model.py  model_deeponet.py  paths.py  pde.py  pde_burgers.py  torch_data.py  torch_ops.py  torch_ops_ext.py  utils.py
src/q1pde/experiments/: ablation.py  common.py  evaluate.py  evaluate_fno.py  evaluate_rpino.py  generate_dataset.py  train_fno.py  train_rpino.py
src/q1pde/paper/: figures.py  tables.py
tests/: test_pde.py
