[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "q1pde"
version = "0.1.0"
description = "Numerical experiments for a nonlinear periodic Poisson RP-INO study"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
