[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "q1pde"
version = "1.0.0"
description = "Certified implicit neural operators on periodic Sobolev spaces — numerical experiments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "David Ariza-Ruiz", email = "david.ariza@universidadviu.com"},
]
keywords = [
    "neural operators",
    "implicit neural networks",
    "deep equilibrium models",
    "periodic Sobolev spaces",
    "operator learning",
    "scientific computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "tqdm"]

[project.urls]
Repository = "https://github.com/davidarizaruiz-VIU/rpino-periodic-semilinear-elliptic"
Paper = "https://doi.org/10.5281/zenodo.19156160"

[tool.setuptools.packages.find]
where = ["src"]
